--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,10 @@
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block;
 	}
-
+	img {
+		width: 100%;
+		height: auto;
+	}
 	body {
 		line-height: 1;
 	}
